--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.4.0",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.14.2",
-    "eslint": "^9.4.0",
+    "eslint": "^8.57.0",
     "globals": "^15.4.0",
     "nodemon": "^3.1.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.13.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2"
   }
 }
